# tech_challenge_fiap_2

./: .env.example  .gitignore  .vercelignore  README.md  algoritmo_genetico.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.doc-evo/: api_migration_roadmap.md  aprendizado_bayesian_optimization.md  architecture_api.md  comparacao_modelos.md  database_persistence.md  dependencias.md  notebook_to_service_map.md  testing_strategy.md
api/: index.py
database/: README.md
database/ddl/: 000_create_database.sql  001_create_triage_prediction_requests.sql  002_create_api_users.sql
frontend/: chat.html  chat.js  index.html  login.js  styles.css
models/: triage_model.joblib  triage_model_metadata.json
scripts/: train_model.py
src/triage_api/: __init__.py  main.py
src/triage_api/api/dependencies/: auth.py
src/triage_api/core/: __init__.py  config.py  logging.py  security.py
src/triage_api/ml/: __init__.py  preprocessing.py  training.py
src/triage_api/repositories/: __init__.py  prediction_repository.py  user_repository.py
src/triage_api/schemas/: __init__.py  auth.py  chat.py  patient.py  prediction.py
src/triage_api/services/: __init__.py  chat_agent_service.py  interpretation_service.py  model_service.py  openai_client.py
tests/: conftest.py  test_api.py  test_chat_agent_service.py  test_config.py  test_interpretation_service.py  test_logging.py  test_model_service.py  test_openai_client.py  test_prediction_repository.py  test_preprocessing.py  test_schemas.py  test_security.py  test_training.py  test_user_repository.py
(+3 files in other folders)
