[project]
name = "triage-api"
version = "0.1.0"
description = "Prediction API for the emergency triage model."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/triage_api"]
branch = true
omit = [
    "notebook/**",
    "src/triage_api/__init__.py",
    "src/triage_api/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
